Brand UI as BioCad

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Med-Gemma 4B IT - Yapay Zeka Destekli Tıbbi Asistan">
-    <title>Med-Gemma Medical Assistant</title>
+    <meta name="description" content="BioCad - Yapay Zeka Destekli Tıbbi Asistan">
+    <title>BioCad Medical Assistant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
                 <div class="logo">
                     <div class="logo-icon">⚕️</div>
                     <div class="logo-text">
-                        <h1>Med-Gemma</h1>
+                        <h1>BioCad</h1>
                         <span>AI Medical Assistant</span>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <div class="message assistant">
                             <div class="message-avatar">🤖</div>
                             <div class="message-content">
-                                <p>Merhaba! Ben Med-Gemma, yapay zeka destekli tıbbi asistanınızım. Size nasıl yardımcı
+                                <p>Merhaba! Ben BioCad, yapay zeka destekli tıbbi asistanınızım. Size nasıl yardımcı
                                     olabilirim?</p>
                                 <div class="example-questions">
                                     <p class="example-title">Örnek sorular:</p>
