Add BioCad logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
+                    <img class="logo-mark" src="assets/biocad-logo.svg" alt="BioCad logo">
                     <div class="logo-text">
                         <h1>BioCad</h1>
                         <span>AI Medical Assistant</span>
