--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,10 +44,12 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img class="logo-mark" src="assets/biocad-logo.svg" alt="BioCad logo">
+                    <div class="logo-badge">
+                        <img class="logo-mark" src="assets/biocad-logo.svg" alt="BioCad logo">
+                    </div>
                     <div class="logo-text">
                         <h1>BioCad</h1>
-                        <span>AI Medical Assistant</span>
+                        <span>Clinical AI Platform</span>
                     </div>
                 </div>
             </div>
